@@ -4,3 +4,4 @@
 * Refactoring by Sourcery.
 * Drop support for Django<3.2.
 * Drop support Python < 3.6.
+* Added Ukrainian language.
